--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="dashboard_leaderboard_button_text">Leaderboard</string>
     <string name="user">Login</string>
     <string name="pass">Password</string>
-
+    <string name="authentication_failed">Authentication failed</string>
+    
 </resources>
